Refresh tokens have been saved, an authentication controller has been added, and methods for generating tokens have been created